# lagoon

./: .gitignore  Cargo.toml  Makefile  README.md  SPECIFICATION.md
crates/lagoon/: Cargo.toml
crates/lagoon-interpreter/: Cargo.toml
crates/lagoon-interpreter/src/: environment.rs  interpreter.rs  lib.rs
crates/lagoon-interpreter/src/stdlib/: list.rs  mod.rs  number.rs  string.rs
crates/lagoon-js/: Cargo.toml
crates/lagoon-js/src/: lib.rs  polyfill.js
crates/lagoon-parser/: Cargo.toml
crates/lagoon-parser/src/: ast.rs  lib.rs  parser.rs  token.rs
crates/lagoon-vm/: Cargo.toml
crates/lagoon-vm/src/: builder.rs  chunk.rs  code.rs  compiler.rs  frame.rs  lib.rs  native.rs  op.rs  stack.rs  value.rs
crates/lagoon/src/: main.rs
crates/lagoon/src/cmd/: mod.rs
examples/: append.lag  closure.lag  comments.lag  comparison.lag  conditionals.lag  const.lag  error.lag  fib.lag  for-in.lag  global.lag  in.lag  list-object.lag  lists.lag  module.lag  number-object.lag  prefix.lag  print.lag  require.lag  say_hello.lag  string-object.lag  strings.lag  structs.lag  variables.lag
examples/js/: assign.lag  closures.lag  fn.lag  for-in.lag  in.lag  let.lag  math.lag  methods.lag  struct.lag  types.lag
examples/vm/: conditionals.lag  fib.lag  fn.lag  infix.lag  return.lag
src/: ast.rs  environment.rs  interpreter.rs  main.rs  parser.rs  token.rs
src/stdlib/: list.rs  mod.rs  number.rs  string.rs
